k8s/memcore-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: memcore
  namespace: memcore
  labels:
    app: memcore
    tier: backend
    component: engine
spec:
  containers:
    - name: cpp-engine
      image: memcore-cpp-engine:latest
      imagePullPolicy: Never
      ports:
        - containerPort: 50051

    - name: go-api
      image: memcore-go-api:latest
      imagePullPolicy: Never
      ports:
        - containerPort: 8080
