k8s/memcore-svc-grpc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: memcore
  name: memcore-grpc
spec:
  type: ClusterIP
  ports:
  - port: 50051
    protocol: TCP
    targetPort: 50051
  selector:
    app: memcore
status:
  loadBalancer: {}
