k8s/memcore-svc-http.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: memcore
  name: memcore-http
spec:
  type: NodePort
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
    nodePort: 30080
  selector:
    app: memcore
status:
  loadBalancer: {}
