k8s/memcore-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: memcore-ingress
spec:
  rules:
  - host: memcore.local
    http:
      paths:
      - backend:
          service:
            name: memcore-http
            port:
              number: 8080
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
